kubernetes/fingerprint-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fingerprint-deployment
  namespace: minerva-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fingerprint
  template:
    metadata:
      labels:
        app: fingerprint
    spec:
      containers:
      - name: fingerprint
        image: fingerprint:latest
        ports:
        - containerPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: fingerprint-service
  namespace: minerva-namespace
spec:
  selector:
    app: fingerprint
  ports:
    - protocol: TCP
      port: 4000
      targetPort: 4000
  type: ClusterIP
